[gd_scene load_steps=23 format=2]

[ext_resource path="res://assets/Textures_v2/CHAR_INFO/loyalty/Assigned trainer/icons_40x40/magic effect.png" type="Texture" id=1]
[ext_resource path="res://assets/Textures_v2/icon_question_small.png" type="Texture" id=2]
[ext_resource path="res://assets/Textures_v2/CHAR_INFO/loyalty/Training status/skill_frame_learned.png" type="Texture" id=3]
[ext_resource path="res://gui_modules/CharacterInfo/TrUpgradesList.gd" type="Script" id=6]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/NS_36.tres" type="DynamicFont" id=8]
[ext_resource path="res://assets/Fonts_v2/FontThemes/MainMiddle.tres" type="DynamicFont" id=9]
[ext_resource path="res://assets/Textures_v2/CHAR_INFO/loyalty/Assigned trainer/frame_trainer.png" type="Texture" id=10]
[ext_resource path="res://assets/Textures_v2/CHAR_INFO/loyalty/Assign trainer/button_Assign_trainer_hover.png" type="Texture" id=13]
[ext_resource path="res://assets/Textures_v2/CHAR_INFO/loyalty/Assign trainer/button_Assign_trainer_default.png" type="Texture" id=14]
[ext_resource path="res://assets/Textures_v2/CHAR_INFO/loyalty/Assign trainer/button_Assign_trainer_pressed.png" type="Texture" id=15]
[ext_resource path="res://assets/Textures_v2/CHAR_INFO/loyalty/Assigned trainer/button traits/button_traits_hover.png" type="Texture" id=16]
[ext_resource path="res://assets/Textures_v2/CHAR_INFO/loyalty/Assigned trainer/button traits/button_traits_default.png" type="Texture" id=17]
[ext_resource path="res://assets/Textures_v2/CHAR_INFO/loyalty/Training status/button_Reset_training_pressed.png" type="Texture" id=19]
[ext_resource path="res://assets/Textures_v2/CHAR_INFO/loyalty/Training status/button_Reset training_pressed.png" type="Texture" id=20]
[ext_resource path="res://assets/Textures_v2/CHAR_INFO/loyalty/Training status/button_Reset_training_hover.png" type="Texture" id=21]
[ext_resource path="res://assets/Textures_v2/CHAR_INFO/loyalty/Assigned trainer/button d/button_d_pressed.png" type="Texture" id=22]
[ext_resource path="res://assets/Textures_v2/CHAR_INFO/loyalty/Assigned trainer/button d/button_d_default.png" type="Texture" id=23]
[ext_resource path="res://assets/Textures_v2/CHAR_INFO/loyalty/Assigned trainer/button d/button_d_hover.png" type="Texture" id=24]
[ext_resource path="res://assets/Textures_v2/CHAR_INFO/loyalty/Assigned trainer/button category/button_category_default.png" type="Texture" id=26]
[ext_resource path="res://assets/Textures_v2/CHAR_INFO/loyalty/Assigned trainer/button category/button_category_hover.png" type="Texture" id=27]
[ext_resource path="res://assets/Textures_v2/CHAR_INFO/loyalty/Assigned trainer/button category/button_category_pressed.png" type="Texture" id=28]
[ext_resource path="res://assets/Textures_v2/CHAR_INFO/loyalty/Assigned trainer/icons_40x40/group.png" type="Texture" id=29]

[node name="UpgradesList" type="Control"]
margin_right = 500.0
margin_bottom = 724.0
rect_min_size = Vector2( 700, 724 )
script = ExtResource( 6 )

[node name="trainees" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label2" type="Label" parent="trainees"]
margin_left = 10.0
margin_top = 5.0
margin_right = 516.002
margin_bottom = 62.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 8 )
text = "Trainees:"
clip_text = true

[node name="Container" type="VBoxContainer" parent="trainees"]
margin_left = 13.0
margin_top = 66.0
margin_right = 53.0
margin_bottom = 106.0

[node name="Button" type="TextureRect" parent="trainees/Container"]
visible = false
margin_right = 500.0
margin_bottom = 120.0
rect_min_size = Vector2( 500, 120 )
rect_pivot_offset = Vector2( -294, -94 )
texture = ExtResource( 10 )
stretch_mode = 3

[node name="icon" type="TextureRect" parent="trainees/Container/Button"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -379.0

[node name="name" type="Label" parent="trainees/Container/Button"]
light_mask = 0
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -367.0
margin_top = -17.0
margin_bottom = 18.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 9 )
text = "Name"
align = 1
valign = 1
clip_text = true

[node name="no_trainer" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureButton" type="TextureButton" parent="no_trainer"]
margin_left = 126.0
margin_top = 190.0
margin_right = 496.0
margin_bottom = 104.0
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 13 )

[node name="Label2" type="Label" parent="no_trainer/TextureButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 8 )
text = "Assign trainer"
align = 1
valign = 1
clip_text = true

[node name="training" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ScrollContainer" type="ScrollContainer" parent="training"]
margin_left = 5.0
margin_top = 200.0
margin_right = 685.0
margin_bottom = 539.0
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="training/ScrollContainer"]

[node name="category" type="HBoxContainer" parent="training/ScrollContainer/VBoxContainer"]
custom_constants/separation = 2

[node name="Button" type="TextureButton" parent="training/ScrollContainer/VBoxContainer/category"]
visible = false
margin_right = 270.0
margin_bottom = 60.0
texture_normal = ExtResource( 26 )
texture_pressed = ExtResource( 28 )
texture_hover = ExtResource( 27 )
texture_disabled = ExtResource( 28 )

[node name="icon" type="TextureRect" parent="training/ScrollContainer/VBoxContainer/category/Button"]
margin_left = 10.0
margin_top = 10.0
margin_right = 50.0
margin_bottom = 50.0
mouse_filter = 2
texture = ExtResource( 29 )
expand = true

[node name="name" type="Label" parent="training/ScrollContainer/VBoxContainer/category/Button"]
light_mask = 0
margin_left = 58.0
margin_top = 12.0
margin_right = 231.0
margin_bottom = 47.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 9 )
text = "Reset training"
valign = 1
clip_text = true

[node name="HBoxContainer2" type="HBoxContainer" parent="training"]
margin_left = 7.0
margin_top = 575.0
margin_right = 687.0
margin_bottom = 675.0
custom_constants/separation = 20

[node name="Button" type="TextureButton" parent="training/HBoxContainer2"]
visible = false
margin_right = 101.0
margin_bottom = 100.0
toggle_mode = true
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 16 )
texture_hover = ExtResource( 16 )
texture_disabled = ExtResource( 17 )

[node name="icon" type="TextureRect" parent="training/HBoxContainer2/Button"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="trainer_frame" type="TextureRect" parent="training"]
margin_left = 5.0
margin_top = 50.0
margin_right = 125.0
margin_bottom = 170.0
texture = ExtResource( 10 )

[node name="icon" type="TextureRect" parent="training/trainer_frame"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
expand = true

[node name="d_button" type="TextureButton" parent="training"]
margin_left = 543.0
margin_top = 52.0
margin_right = 589.0
margin_bottom = 98.0
texture_normal = ExtResource( 23 )
texture_pressed = ExtResource( 22 )
texture_hover = ExtResource( 24 )

[node name="status" type="Label" parent="training/d_button"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = -6.0
margin_right = 1.0
margin_bottom = -73.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 8 )
text = "D"
align = 1
valign = 1
clip_text = true

[node name="name" type="Label" parent="training"]
light_mask = 0
margin_left = 129.0
margin_top = 50.0
margin_right = 527.0
margin_bottom = 85.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 9 )
text = "Reset training"
valign = 1
clip_text = true

[node name="spirit" type="Label" parent="training"]
light_mask = 0
margin_left = 129.0
margin_top = 89.0
margin_right = 428.0
margin_bottom = 124.0
custom_fonts/font = ExtResource( 9 )
text = "Reset training"
valign = 1
clip_text = true

[node name="loyalty" type="Label" parent="training"]
light_mask = 0
margin_left = 129.0
margin_top = 128.0
margin_right = 423.0
margin_bottom = 163.0
custom_fonts/font = ExtResource( 9 )
text = "character loyalty: 100"
valign = 1
clip_text = true

[node name="cost" type="Label" parent="training"]
light_mask = 0
margin_left = 9.0
margin_top = 681.0
margin_right = 292.0
margin_bottom = 716.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 9 )
text = "Reset training"
valign = 1
clip_text = true

[node name="complete_button" type="TextureButton" parent="training"]
margin_left = 438.0
margin_top = 110.0
margin_right = 688.0
margin_bottom = 168.0
texture_normal = ExtResource( 20 )
texture_pressed = ExtResource( 19 )
texture_hover = ExtResource( 21 )
texture_disabled = ExtResource( 19 )

[node name="reset" type="Label" parent="training/complete_button"]
light_mask = 0
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 9 )
text = "Finish training"
align = 1
valign = 1
clip_text = true

[node name="Tooltip" type="TextureRect" parent="training"]
margin_left = 631.0
margin_top = 43.0
margin_right = 681.0
margin_bottom = 90.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="trainer_list" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label2" type="Label" parent="trainer_list"]
margin_left = 10.0
margin_top = 5.0
margin_right = 516.002
margin_bottom = 62.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 8 )
text = "Trainers avaliable:"
clip_text = true

[node name="Container" type="VBoxContainer" parent="trainer_list"]
margin_left = 13.0
margin_top = 66.0
margin_right = 53.0
margin_bottom = 106.0

[node name="Button" type="TextureButton" parent="trainer_list/Container"]
visible = false
margin_right = 500.0
margin_bottom = 100.0
rect_min_size = Vector2( 500, 100 )
rect_pivot_offset = Vector2( -294, -94 )
texture_normal = ExtResource( 17 )
texture_hover = ExtResource( 16 )
texture_disabled = ExtResource( 17 )
stretch_mode = 3

[node name="icon" type="TextureRect" parent="trainer_list/Container/Button"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -400.0
expand = true

[node name="name" type="Label" parent="trainer_list/Container/Button"]
light_mask = 0
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -387.0
margin_top = -48.0
margin_right = -1.0
margin_bottom = -13.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 9 )
text = "Name"
align = 1
valign = 1
clip_text = true

[node name="desc" type="Label" parent="trainer_list/Container/Button"]
light_mask = 0
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -385.0
margin_top = -13.0
margin_right = 1.0
margin_bottom = 45.0

[node name="finished" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="reset_button" type="TextureButton" parent="finished"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -125.0
margin_top = -78.0
margin_right = 125.0
margin_bottom = -20.0
texture_normal = ExtResource( 20 )
texture_pressed = ExtResource( 19 )
texture_hover = ExtResource( 21 )

[node name="reset" type="Label" parent="finished/reset_button"]
light_mask = 0
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 9 )
text = "Reset training"
align = 1
valign = 1
clip_text = true

[node name="VBoxContainer" type="VBoxContainer" parent="finished"]
margin_left = 51.0
margin_top = 51.0
margin_right = 651.0
margin_bottom = 573.0

[node name="result_frame" type="TextureRect" parent="finished/VBoxContainer"]
margin_right = 600.0
margin_bottom = 106.0
texture = ExtResource( 3 )

[node name="icon" type="TextureRect" parent="finished/VBoxContainer/result_frame"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -497.0
margin_bottom = -5.0
mouse_filter = 2
expand = true

[node name="header_text" type="Label" parent="finished/VBoxContainer/result_frame"]
margin_left = 119.0
margin_top = 1.0
margin_right = 635.0
margin_bottom = 109.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 8 )
text = "Training status"
clip_text = true

[node name="select_text" type="Label" parent="finished/VBoxContainer"]
margin_top = 110.0
margin_right = 600.0
margin_bottom = 163.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 8 )
text = "Select specialization:"
clip_text = true

[node name="rewards" type="HBoxContainer" parent="finished/VBoxContainer"]
margin_top = 167.0
margin_right = 600.0
margin_bottom = 167.0
custom_constants/separation = 20

[node name="button" type="TextureButton" parent="finished/VBoxContainer/rewards"]
visible = false
margin_right = 108.0
margin_bottom = 106.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )

[node name="icon" type="TextureRect" parent="finished/VBoxContainer/rewards/button"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -497.0
margin_bottom = -5.0
mouse_filter = 2
expand = true

[node name="list" type="Label" parent="finished/VBoxContainer"]
margin_top = 171.0
margin_right = 600.0
margin_bottom = 224.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 8 )
text = "Trainees:"
clip_text = true

[node name="status" type="Label" parent="finished"]
margin_left = 51.0
margin_top = 573.0
margin_right = 651.0
margin_bottom = 626.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 8 )
text = "Trainees:"
clip_text = true
